--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,197 +1,178 @@
-/* The navigation bar */
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/spiration.png");
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h2,
+h3 {
+  font-size: 22px;
+}
+
+/* header */
+
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+}
+
 .navbar {
 
-    overflow: hidden;
-    background-color: white;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 3;
+  background-color: white;
 
 }
 
-/* Links inside the navbar */
 .navbar a {
-
-    float: right;
-    display: block;
-    color: gray;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  font-size: 24px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-.navbar a:hover{
-
-	background-color: gray;
-	color: white;
-}
-
-.navbar h1 {
-
-	float: left;
-	color: white;
-	background-color: #4aaaa5;
-	font-size: 24px;
-	padding: 10px 10px 10px 10px;
-}
-
-.bioContainer {
-
-	width: 650px;
-	float: left;
-	background-color: white;
-	margin-top: 100px;
-	margin-left: 20px;
-}
-
-.bioContainer h1 {
-
-	color: #4aaaa5;
-	font-size: 24px;
-	padding: 20px 20px 20px 20px;
-	border-width: 0px 0px 5px 0px;
-	border-style: solid;
-	border-color: gray;
-	width: 75%;
-	margin-left: 20px;
-
-}
-
-.bioContainer  {
-
-	float: left;
-	width: 650px;
-}
-
-img {
-
-	width: 35%;
-	height: auto;
-	padding: 20px 20px 20px 20px;
-
-}
-
-.bioContainer p {
-
-	padding: 20px 20px 20px 20px;
-	float: right;
+.navbar a:first-child {
+  border-left: 0 none;
 }
 
 
-form {
-
-	padding-left: 20px;
+/* edit these!
+.navbar .navbar-header {
+  float: none;
 }
-
-input[type=text] {
-    width: 75%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+.navbar .navbar-toggle {
+  display: block;
 }
-
-input[type=submit] {
-    width: 75%;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.navbar .navbar-collapse.collapse {
+  display: none!important;
 }
-
-input[type=submit]:hover {
-    background-color: #45a049;
+.navbar .navbar-nav {
+  float: none!important;
 }
-
-textarea {
-
-	width: 75%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-
+.navbar .navbar-nav > li {
+  float: none;
 }
+.navbar .navbar-collapse.collapse.in {
+  display: block !important;
+}*/
 
 
-.socialContainer {
-
-	float: right;
-	background-color: white;
-	width: 270px;
-	margin-top: 100px;
-	padding-bottom: 30px;
-}
-
-.socialContainer h1 {
-
-	color: #4aaaa5;
-	font-size: 24px;
-	padding: 20px 20px 20px 20px;
-
-}
-
-.socialContainer li {
-
-	display: inline;
-
-}
-
-.socialContainer img {
-
-	width: 15%;
-	height: auto;
-	padding: 10px 10px 10px 10px;
-	float: center;
-
-}
-
-.portfolioImg {
-
-	width: 25%;
-	height: auto;
-	padding: 10px 10px 10px 10px;
-	float: left;
-
-}
 
 
-body {
 
-	width: 960px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	background-image: url("../images/spiration.png");
-	margin-top: 30px;
-	margin-bottom: 30px;
-
-}
+/* footer */
 
 footer {
-
-	background-color: gray;
-	color: white;
-	text-align: center;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 50px;
-
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
 }
 
-footer p {
+/* sidebar */
 
-	padding: 20px 20px 20px 20px;
-
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+/* main */
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 650px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio page */
 
 .work {
   position: relative;
@@ -223,4 +204,52 @@ footer p {
   text-align: center;
   background: #4aaaa5;
   border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
